# kalshi-inefficiency

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: 01_data_collection.ipynb  02_feature_engineering.ipynb  03_modeling.ipynb  04_backtesting.ipynb
src/kalshi_proj/: config.py  fetch_data.py  preprocess.py  utils.py  visualize.py
src/kalshi_proj/backtest/: ev_backtester.py
src/kalshi_proj/models/: logistic.py  mc_sim.py
tests/: test_ev_backtester.py  test_preprocess.py
