
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kalshi-proj"
version = "0.1.0"
description = "Kalshi inefficiency finder"
authors = [{name="Your Name"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
